# libdevil

./: CMakeLists.txt  config.h.cmake  dist.info
cmake/: configure.cmake
